# cybercity-engine

./: .gitignore  AGENTS.md  LICENSE  LICENSE-DOCS  README.md  compose.yaml  go.mod  master.md  network.md  network.yml  pyproject.toml
cmd/cybercity-engine/: main.go
docs/: API.md  ARCHITECTURE.md  DATA_FLOW.md  DEPLOYMENT.md  DEVELOPMENT.md  MATH_MODEL.md  MODELS.md  VISION.md
docs/adr/: 0001-two-graph-architecture.md  0002-event-driven-runtime.md  0003-hybrid-execution.md  0004-event-sourcing.md  0004-messaging-redpanda.md  0005-python-first-go-later.md  0006-go-first.md  0007-network-model.md  README.md
internal/adapters/api/: server.go
internal/adapters/loader/: loader.go  loader_test.go
internal/adapters/memory/: broadcaster.go  bus.go  event_store.go  snapshot_store.go
internal/application/: runtime.go
internal/config/: config.go
internal/domain/engine/: engine.go  engine_test.go  handlers.go
internal/domain/models/: models.go  models_test.go
internal/domain/ports/: agent.go  broadcaster.go  bus.go  loader.go  snapshot.go  store.go
internal/domain/router/: router.go
internal/domain/state/: state.go
internal/events/: doc.go
internal/network/: doc.go
internal/runtime/: doc.go
internal/scenario/: doc.go
internal/sim/: doc.go
src/cybercity_engine/: __init__.py  __main__.py  api.py  bootstrap.py  config.py  engine.py  events.py  models.py  router.py  state.py
tests/: test_bootstrap.py  test_engine.py  test_models.py
