[project]
name = "cybercity-engine"
version = "0.1.0"
description = "Event-driven runtime engine for the CyberCity digital twin"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "networkx>=3.3",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "aiokafka>=0.10",
    "asyncpg>=0.29",
    "python-json-logger>=2.0",
    "prometheus-client>=0.20",
]

[project.scripts]
cybercity-engine = "cybercity_engine.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cybercity_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "ruff>=0.5",
    "mypy>=1.0",
    "hypothesis>=6.0",
    "respx>=0.21",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
